# snake-posix

./: CMakeLists.txt  example-map.txt
client/: CMakeLists.txt  client.puml  connect_menu.c  connect_menu.h  host_menu.c  host_menu.h  input.c  input.h  main.c  main_menu.c  main_menu.h  map_menu.c  map_menu.h  queue.h  server_launcher.c  server_launcher.h  shm_client.c  shm_client.h  socket_client.c  socket_client.h  terminal.c  terminal.h
client/menu/: connect_menu.c  host_menu.c  main_menu.c  menu.puml
client/renderer/: renderer.c  renderer.h  renderer.puml  renderer_command.h  renderer_command_queue.c  renderer_command_queue.h
libargs/: CMakeLists.txt  args.h  source.txt
librng/: CMakeLists.txt  rng.c  rng.h
libsnake/: CMakeLists.txt  constants.h  coordinates.c  coordinates.h  direction.c  direction.h  game_settings.h  game_state.c  game_state.h  libsnake.puml  rng.c  rng.h  shm_game_state.c  shm_game_state.h  socket.c  socket.h  socket_message.c  socket_message.h  syn_helpers.c  syn_helpers.h  syn_template.h  ticker.c  ticker.h
libsnake/changelog/: changelog.c  changelog.h  changelog.puml  syn_changelog.c  syn_changelog.h
libsnake/map/: map.c  map.h  map.puml  map_template.c  map_template.h  syn_map.c  syn_map.h
libsnake/player/: player.h  player.puml  player_manager.c  player_manager.h  syn_player.c  syn_player.h
libsnake/socket/: socket.c  socket.puml  socket_message.c  socket_message.h
libtermbox2/: CMakeLists.txt  source.txt
server/: CMakeLists.txt  argument_parser.c  argument_parser.h  client_connection.c  client_connection.h  client_connection_acceptor.c  client_connection_acceptor.h  client_connection_handler.c  client_connection_handler.h  main.c  map_loader.c  map_loader.h  map_settings.h  player_data_cache.c  player_data_cache.h  server.c  server.h  (+1 more)
